...
    case bcc
    case subject
    case body

    var identifier: String {
        switch self {
        case .to: return "composer-to"
        case .cc: return "composer-cc"
        case .bcc: return "composer-bcc"
        case .subject: return "composer-subject"
        case .body: return "composer-body"
        }
    }
...
